fixing the counter functionality and the layout issues with Instructor, Andy. I took an animation from https://stackoverflow.com/questions/23152900/how-to-create-bouncing-div-animation to make the arrow icon bounce.

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -3,6 +3,7 @@
   justify-content: center;
   align-items: center;
   margin-right: 40px;
+  margin-right: 2px;
 }
 
 #new-tweet {
@@ -54,9 +55,34 @@
 #test-tweet {
   display: flex;
   flex-direction: column;
-  height: 100px;
   border:solid 3px black;
   margin-top: 1em;
+}
+
+.tweet-header {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+}
+
+#at-user {
+  word-wrap: break-word;
+}
+
+.tweet-avatar {
+  display: flex;
+}
+
+.tweet-body {
+  padding: 20px;
+  word-wrap: break-word;
+  text-decoration: underline;
+}
+
+.tweet-footer {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
 }
 
 #test-tweet img{
@@ -73,62 +99,17 @@
   height: 10px;
 }
 
-#at-user {
-  display: flex;
-  justify-content: flex-end;
-  font-size: 18px;
-  margin-top: 8px;
-  margin-left: 550px;
+.tweet-icons {
+  color: red;
 }
 
-#text-line {
-  height: 500px;
-}
-
-#interaction-icon1 {
-  transition: box-shadow .3s;
-  display: flex;
-  flex-direction: flex-end;
-  width: 40px;
-  float: left;
-  border-radius:10px;
-  margin-top: 100px;
-}
-
-#interaction-icon1:hover {
+i:hover {
   box-shadow: 0 0 11px rgba(80, 13, 13, 0.2); 
-  text-shadow: 0 0 10px blue;
-}
-
-#interaction-icon2 {
-  display: flex;
-  flex-direction: flex-end;
-  width: 40px;
-  margin-top: 100px;
-}
-
-#interaction-icon2:hover {
-  box-shadow: 0 0 11px rgba(80, 13, 13, 0.2); 
-  text-shadow: 0 0 10px blue;
-}
-
-#interaction-icon3 {
-  display: flex;
-  flex-direction: flex-end;
-  margin-top: 100px;
-}
-
-#interaction-icon3:hover {
-  box-shadow: 0 0 11px rgba(80, 13, 13, 0.2);
   text-shadow: 0 0 10px blue;
 }
 
 #tweet-date {
-  display: flex;
   font-size: 14px;
-  margin-right: 450px;
-  margin-top: 80px;
-  margin-left: 20px;
 }
 
 @media only screen and (min-width: 1024px) {
